move to tsx page generation

--- a/obs/tsconfig.json
+++ b/obs/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "ESNext",
     "moduleDetection": "force",
     "jsx": "react-jsx",
-    "jsxImportSource": "typed-htmx/typed-htmx",
+    "jsxImportSource": "typed-htmx/typed-html",
     "allowJs": true,
 
     /* Bundler mode */
