--- a/obs/package.json
+++ b/obs/package.json
@@ -10,7 +10,9 @@
     "@types/bun": "latest",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/obs-studio": "^2.17.2"
+    "@types/obs-studio": "^2.17.2",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.16"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -20,6 +22,9 @@
     "bun": "^1.1.24",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-twitch": "^1.0.3",
     "prettier": "^3.3.3",
     "typed-htmx": "^0.3.1",
     "ws": "^8.18.0"
